Implement relational pattern lowering and code gen. Does not implement subsumption and exhaustiveness.

--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5954,4 +5954,10 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
   <data name="ERR_DesignatorBeneathPatternCombinator" xml:space="preserve">
     <value>A variable may not be declared within a 'not' or 'or' pattern.</value>
   </data>
+  <data name="ERR_UnsupportedTypeForRelationalPattern" xml:space="preserve">
+    <value>Relational patterns may not be used for a value of type '{0}'.</value>
+  </data>
+  <data name="ERR_RelationalPatternWithNaN" xml:space="preserve">
+    <value>Relational patterns may not be used for a floating-point NaN.</value>
+  </data>
 </root>
