--- a/src/Compilers/CSharp/Portable/CSharpResources.resx
+++ b/src/Compilers/CSharp/Portable/CSharpResources.resx
@@ -5942,4 +5942,7 @@ To remove the warning, you can use /reference instead (set the Embed Interop Typ
   <data name="ERR_BadRecordDeclaration" xml:space="preserve">
     <value>Records must have both a 'data' modifier and parameter list</value>
   </data>
+  <data name="ERR_DuplicateRecordConstructor" xml:space="preserve">
+    <value>There cannot be a primary constructor and a member constructor with the same parameter types.</value>
+  </data>
 </root>
