Port CSharpMakeStructFieldsWritableDiagnosticAnalyzer and fixer

--- a/src/CodeStyle/CSharp/Analyzers/CSharpCodeStyleResources.resx
+++ b/src/CodeStyle/CSharp/Analyzers/CSharpCodeStyleResources.resx
@@ -126,4 +126,8 @@
   <data name="Wrapping_preferences" xml:space="preserve">
     <value>Wrapping preferences</value>
   </data>
+  <data name="Make_readonly_fields_writable" xml:space="preserve">
+    <value>Make readonly fields writable</value>
+    <comment>{Locked="readonly"} "readonly" is C# keyword and should not be localized.</comment>
+  </data>
 </root>
