--- a/src/CodeStyle/CSharp/Analyzers/xlf/CSharpCodeStyleResources.pt-BR.xlf
+++ b/src/CodeStyle/CSharp/Analyzers/xlf/CSharpCodeStyleResources.pt-BR.xlf
@@ -7,6 +7,11 @@
         <target state="translated">Preferências de recuo</target>
         <note />
       </trans-unit>
+      <trans-unit id="Make_readonly_fields_writable">
+        <source>Make readonly fields writable</source>
+        <target state="new">Make readonly fields writable</target>
+        <note>{Locked="readonly"} "readonly" is C# keyword and should not be localized.</note>
+      </trans-unit>
       <trans-unit id="Space_preferences">
         <source>Space preferences</source>
         <target state="translated">Preferências de espaço</target>
